@@ -7,6 +7,9 @@
   averages based on the available count variables (i.e. as if the final bin was
   performed on the original data).
 
+* harp_product_update_history() now also adds the current utc time and harp
+  version before the execution command.
+
 * Allow NULL as argument for harp_variable_set_description() and
   harp_variable_set_unit() to clear the current description/unit.
 
